--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,13 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+
+
+#
+[sS]cripts/ 
+*.cfg
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
